--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Hank Quinlan, Horrible Cop</title>
+		<title>Website Anna Zinonos Artist Painter Blog Updates Artshop</title>
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
@@ -10,21 +10,27 @@
 		<nav>
     		<ul>
         		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
+			<li><a href="/artbooks-by-anna-zinonos">Artbooks by A.Zinonos</a></li>
+	        	<li><a href="/about-anna-zinonos">About</a></li>
+        		<li><a href="/anna-zinonos-bio">Bio</a></li>
+        		<li><a href="/anna-zinonos-art-blog">Blog</a></li>
+			<li><a href="/contact-Anna-Zinonos">Contact</a></li>
     		</ul>
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Hi there, I'm Hank Quinlan!</h1>
-				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+        		<h1>Hi there, I'm Anna Zinonos!</h1>
+			<p><a href="">born 1980 in Athens Greece</a>, but not living in Greece since 1999. 
+			<p>If you have found me by accident, there is nothing of interest here for you. 
+	                  <p>...or...
+		         <p> If you are looking to see more of my artwork or the ebooks I wrote on art related subjecteds, just check out the links abov
+				
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+        		<li><a href="mailto:anzenonos@gmail.com">email</a></li>
+        		<li><a href="https://github.com/zinonosanna">github.com/hankquinlan</a></li>
 			</ul>
 		</footer>
 	</body>
