added copyrights notice

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		<footer>
     		<ul>
         		<li><a href="mailto:anzenonos@gmail.com">email</a></li>
-        		<li><a href="https://github.com/zinonosanna">github.com/hankquinlan</a></li>
+        		zinonosanna.github.io Anna Zinonos - 2016 - All Rights Reserved.
 			</ul>
 		</footer>
 	</body>
