--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
 	<body>
+		<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.8";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
 		<nav>
     		<ul>
         		<li><a href="/">Home</a></li>
@@ -28,6 +36,7 @@
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
+			<div class="fb-comments" data-href="https://zinonosanna.github.io/" data-numposts="5"></div>
     		<ul>
         		<li><a href="mailto:anzenonos@gmail.com">email</a></li>
         		zinonosanna.github.io Anna Zinonos - 2016 - All Rights Reserved.
