--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     		<ul>
         		<li><a href="/">Home</a></li>
 			<li><a href="https://zinonosanna.github.io/artbooksbyannazinonos">Artbooks by A.Zinonos</a></li>
-	        	<li><a href="/about-anna-zinonos">About</a></li>
-        		<li><a href="/anna-zinonos-bio">Bio</a></li>
-        		<li><a href="/anna-zinonos-art-blog">Blog</a></li>
-			<li><a href="/contact-Anna-Zinonos">Contact</a></li>
+	        	<li><a href="https://zinonosanna.github.io/about-anna-zinonos">About</a></li>
+        		<li><a href="https://zinonosanna.github.io/about-anna-zinonos/anna-zinonos-bio">Bio</a></li>
+        		<li><a href="https://zinonosanna.github.io/about-anna-zinonos/anna-zinonos-art-blog">Blog</a></li>
+			<li><a href="https://zinonosanna.github.io/about-anna-zinonos/contact-Anna-Zinonos">Contact</a></li>
     		</ul>
 		</nav>
 		<div class="container">
