--- a/anna-zinonos-art-blog.html
+++ b/anna-zinonos-art-blog.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 	<head>
@@ -7,21 +8,21 @@
 	</head>
 	<body>
 		<div id="fb-root"></div>
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.8";
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
+               <script>(function(d, s, id) {
+               var js, fjs = d.getElementsByTagName(s)[0];
+                if (d.getElementById(id)) return;
+                js = d.createElement(s); js.id = id;
+                   js.src = "//connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.8";
+                  fjs.parentNode.insertBefore(js, fjs);
+                      }(document, 'script', 'facebook-jssdk'));</script>
 		<nav>
     		<ul>
         		<li><a href="/">Home</a></li>
 			<li><a href="https://zinonosanna.github.io/artbooksbyannazinonos">Artbooks by A.Zinonos</a></li>
 	        	<li><a href="https://zinonosanna.github.io/about-anna-zinonos">About</a></li>
-        		<li><a href="https://zinonosanna.github.io/about-anna-zinonos/anna-zinonos-bio">Bio</a></li>
-        		<li><a href="https://zinonosanna.github.io/about-anna-zinonos/anna-zinonos-art-blog">Blog</a></li>
-			<li><a href="https://zinonosanna.github.io/about-anna-zinonos/contact-Anna-Zinonos">Contact</a></li>
+        		<li><a href="https://zinonosanna.github.io/anna-zinonos-bio">Bio</a></li>
+        		<li><a href="https://zinonosanna.github.io/anna-zinonos-art-blog">Blog</a></li>
+			<li><a href="https://zinonosanna.github.io/contact-Anna-Zinonos">Contact</a></li>
     		</ul>
 		</nav>
 		<div class="container">
@@ -43,4 +44,3 @@
 		</footer>
 	</body>
 </html>
-
