--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 		<footer>
 			<div class="fb-comments" data-href="https://zinonosanna.github.io/" data-numposts="5"></div>
     		<ul>
-        		<li><a href="mailto:anzenonos@gmail.com">email</a></li>
-        		zinonosanna.github.io Anna Zinonos - 2016 - All Rights Reserved.
+        		<li><a href="mailto:anzenkh@gmail.com">email</a></li>
+        		 Anna Zinonos - 2016 - All Rights Reserved.
 			</ul>
 		</footer>
 	</body>
