--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     		<ul>
         		<li><a href="/">Home</a></li>
 			
-        		<li><a href="https://zinonosanna.github.io/anna-zinonos-art-blog">Blog</a></li>
+        		<li><a href="/">Blog</a></li>
 			
     		</ul>
 		</nav>
