--- a/anna-zinonos-art-blog.html
+++ b/anna-zinonos-art-blog.html
@@ -19,8 +19,8 @@
     		<ul>
         		<li><a href="/">Home</a></li>
 			
-        		<li><a href="https://zinonosanna.github.io/anna-zinonos-art-blog">Blog</a></li>
-			<li><a href="https://zinonosanna.github.io/contact-Anna-Zinonos">Contact</a></li>
+        		<li><a href="/">Blog</a></li>
+			<li><a href="/">Contact</a></li>
     		</ul>
 		</nav>
 		<div class="container">
