--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Website Anna Zinonos Artist Painter Blog Updates Artshop</title>
+		<title>Web</title>
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
@@ -26,10 +26,9 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there, I'm Anna Zinonos!</h1>
-			<p><a href="">born 1980 in Athens Greece</a>, but not living in Greece since 1999. 
+			<p><a href="">digital marketing for artists</a>,
 			<p>If you have found me by accident, there is nothing of interest here for you. 
-	                  <p>...or...
-		         <p> If you are looking to see more of my artwork or the ebooks I wrote on art related subjecteds, just check out the links abov
+				<P>UNDER DEVELOPMENT</P>
 				
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
