--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Hi there, I'm Anna Zinonos!</h1>
+        		<h1>Hi there, !</h1>
 			<p><a href="">digital marketing for artists</a>,
 			<p>If you have found me by accident, there is nothing of interest here for you. 
 				<P>UNDER DEVELOPMENT</P>
