--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			<div class="fb-comments" data-href="https://zinonosanna.github.io/" data-numposts="5"></div>
     		<ul>
         		<li><a href="mailto:anzenkh@gmail.com">email</a></li>
-        		 Anna Zinonos - 2016 - All Rights Reserved.
+        		 digitalmarketingforartists.com 2016-2017 All Rights Reserved.
 			</ul>
 		</footer>
 	</body>
