--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta name="google-site-verification" content="DyTDJ9bKLxIYYsVTY1b6c2UaZdKbOtQLXMM8p5fhy8o" />
 		<title>Web</title>
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
